# aparavi_chatbot

./: .gitignore  README.md  chunked_company_docs.json  company_docs_sample.json  evaluation_results.json  pyproject.toml  requirements.txt  run_streamlit.py  setup.py
src/aparavi_chatbot/: __init__.py  agents.py  app.py  chunking.py  config.py  crew.py  evaluate.py  indexing.py  main.py  retrieval_service.py  tasks.py
src/aparavi_chatbot/services/: chunking_service.py  indexing_service.py  retrieval_service.py
src/aparavi_chatbot/tools/: custom_tool.py  validation_tool.py
