[project]
name = "aparavi_chatbot"
version = "0.1.0"
description = "aparavi_chatbot using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.105.0,<1.0.0"
]

[project.scripts]
aparavi_chatbot = "aparavi_chatbot.main:run"
run_crew = "aparavi_chatbot.main:run"
train = "aparavi_chatbot.main:train"
replay = "aparavi_chatbot.main:replay"
test = "aparavi_chatbot.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
